Migrate all 73 modules to Hibernate 6 / Jakarta / Java 21 / JUnit 5 / H2
Port the entire recipe collection off the dead 2017 stack (Hibernate 5.2,
javax.persistence, JUnit 4, log4j, external PostgreSQL) to a current,
zero-setup stack. Full reactor 'mvn test' is green: 95 tests pass against
in-memory H2, no database or Docker required.

Mechanical changes across modules:
- javax.persistence.* -> jakarta.persistence.*; persistence.xml to Jakarta
  3.1 namespace + H2Dialect + in-memory H2 datasource
- JUnit 4 -> JUnit 5 (Jupiter); log4j -> SLF4J (+ simplelogger.properties)
- module POMs reduced to versionless deps inherited from the parent
- register all modules in the parent reactor

Notable Hibernate 6 / H2 adaptations:
- custom SQL functions via FunctionContributor SPI (CriteriaCustomFunction,
  JPQLCustomFunction)
- 2nd-level/query cache on JCache + Ehcache 3 (2ndLevelCache, QueryCache)
- DB-generated column via H2 Trigger + @Generated(event=...) (MapGeneratedColumns)
- stored procedure via H2 CREATE ALIAS + ProcedureCall.markAsFunctionCall
  (StoredProcedureQuery)
- database view via @Subselect/@Synchronize (DatabaseViews)
- @Formula and UUID generation ported to Hibernate 6 / H2 equivalents
- SpringBootBootstrapping upgraded to Spring Boot 3.3

Document the modernized stack, how to run, and a per-module migration recipe
in the README.

https://claude.ai/code/session_01CGo3pm452VBzjzRA2FPRVj