@@ -2,29 +2,30 @@ package org.thoughts.on.java.model;
 
 import java.time.LocalDate;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
-import javax.persistence.TypedQuery;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
+import jakarta.persistence.TypedQuery;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class TestInheritance {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -59,10 +60,10 @@ public class TestInheritance {
 		TypedQuery<Book> q = em.createQuery("SELECT b FROM Book b WHERE b.id = :id", Book.class);
 		q.setParameter("id", 1L);
 		b = q.getSingleResult();
-		Assert.assertTrue(b instanceof Book);
-		Assert.assertEquals(new Long(1), ((Book)b).getId());
-		
-		log.info(b);
+		Assertions.assertTrue(b instanceof Book);
+		Assertions.assertEquals(Long.valueOf(1), ((Book)b).getId());
+
+		log.info("{}", b);
 		
 		em.getTransaction().commit();
 		em.close();
@@ -73,7 +74,7 @@ public class TestInheritance {
 
 		a = em.find(Author.class, 1L);
 		for (Publication p : a.getPublications()) {
-			log.info(p);
+			log.info("{}", p);
 		}
 
 		em.getTransaction().commit();
