@@ -1,28 +1,29 @@
 package org.thoughts.on.java.model;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
-import javax.persistence.TypedQuery;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
+import jakarta.persistence.TypedQuery;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestJpqlQuery {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -37,11 +38,11 @@ public class TestJpqlQuery {
 		TypedQuery<BookValue> q = em.createQuery("SELECT new org.thoughts.on.java.model.BookValue(b.id, b.title, b.publisher.name) FROM Book b WHERE b.id = :id", BookValue.class);
 		q.setParameter("id", 1L);
 		BookValue b = q.getSingleResult();
-		
-		Assert.assertTrue(b instanceof BookValue);
-		Assert.assertEquals(new Long(1), ((BookValue)b).getId());
-		log.info(b);
-		
+
+		Assertions.assertTrue(b instanceof BookValue);
+		Assertions.assertEquals(Long.valueOf(1), ((BookValue)b).getId());
+		log.info("{}", b);
+
 		em.getTransaction().commit();
 		em.close();
 	}
