@@ -1,27 +1,28 @@
 package org.thoughts.on.java.model;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestMapNativeQuery {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -34,14 +35,14 @@ public class TestMapNativeQuery {
 		em.getTransaction().begin();
 
 		Book b = (Book) em.createNativeQuery("SELECT * FROM book b WHERE id = 1", Book.class).getSingleResult();
-		Assert.assertTrue(b instanceof Book);
-		Assert.assertEquals(new Long(1), b.getId());
-		Assert.assertEquals("Hibernate Tips", b.getTitle());
-		
+		Assertions.assertTrue(b instanceof Book);
+		Assertions.assertEquals(Long.valueOf(1), b.getId());
+		Assertions.assertEquals("Hibernate Tips", b.getTitle());
+
 		em.getTransaction().commit();
 		em.close();
 	}
-	
+
 	@Test
 	public void explicitMapping() {
 		log.info("... explicitMapping ...");
@@ -50,10 +51,10 @@ public class TestMapNativeQuery {
 		em.getTransaction().begin();
 
 		Book b = (Book) em.createNativeQuery("SELECT id as bookId, version, title, publishingDate, publisherid FROM book b WHERE id = 1", "BookMapping").getSingleResult();
-		Assert.assertTrue(b instanceof Book);
-		Assert.assertEquals(new Long(1), b.getId());
-		Assert.assertEquals("Hibernate Tips", b.getTitle());
-		
+		Assertions.assertTrue(b instanceof Book);
+		Assertions.assertEquals(Long.valueOf(1), b.getId());
+		Assertions.assertEquals("Hibernate Tips", b.getTitle());
+
 		em.getTransaction().commit();
 		em.close();
 	}
