@@ -1,28 +1,29 @@
 package org.thoughts.on.java.model;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
-import javax.persistence.Query;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
+import jakarta.persistence.Query;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestNativeQuery {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -37,9 +38,9 @@ public class TestNativeQuery {
 		Query q = em.createNativeQuery("SELECT * FROM book b WHERE id = ?", Book.class);
 		q.setParameter(1, 1);
 		Book b = (Book) q.getSingleResult();
-		Assert.assertTrue(b instanceof Book);
-		Assert.assertEquals(new Long(1), ((Book)b).getId());
-		
+		Assertions.assertTrue(b instanceof Book);
+		Assertions.assertEquals(Long.valueOf(1), b.getId());
+
 		em.getTransaction().commit();
 		em.close();
 	}
